--- a/styles.css
+++ b/styles.css
@@ -195,31 +195,31 @@ span {
 }
 
 .hero-image .img {
-    background-image: url(../nicks-website/hero-img.jpg);
+    background-image: url(/hero-img.jpg);
     background-size: cover;
     width: 32%;
     height: 40vh;
 }
 .hero-image .img1 {
-    background-image: url(../nicks-website/hero-img.jpg);
+    background-image: url(/hero-img.jpg);
     background-size: cover;
     width: 25%;
     height: 40vh;
 }
 .hero-image .img2 {
-    background-image: url(../nicks-website/hero-img.jpg);
+    background-image: url(/hero-img.jpg);
     background-size: cover;
     width: 20%;
     height: 40vh;
 }
 .hero-image .img3 {
-    background-image: url(../nicks-website/hero-img.jpg);
+    background-image: url(/hero-img.jpg);
     background-size: cover;
     width: 14%;
     height: 40vh;
 }
 .hero-image .img4 {
-    background-image: url(../nicks-website/hero-img.jpg);
+    background-image: url(/hero-img.jpg);
     background-size: cover;
     width: 8%;
     height: 40vh;
