--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,10 @@ header {
     border-bottom: 1px solid rgb(209, 209, 209);
 }
 
+.top-logo{
+    text-decoration: none;
+}
+
 .logo {
     display: flex;
     gap: 0.5em;
@@ -65,6 +69,10 @@ span {
     background-color: #0F1B2F;
     color: #fff;
     border-radius: 10px;
+}
+
+.support button:hover {
+    background-color: #0f1b2fdb;
 }
 
 .hero {
@@ -195,31 +203,31 @@ span {
 }
 
 .hero-image .img {
-    background-image: url(/hero-img.jpg);
+    background-image: url(/images/hero-img.jpg);
     background-size: cover;
     width: 32%;
     height: 40vh;
 }
 .hero-image .img1 {
-    background-image: url(/hero-img.jpg);
+    background-image: url(/images/hero-img.jpg);
     background-size: cover;
     width: 25%;
     height: 40vh;
 }
 .hero-image .img2 {
-    background-image: url(/hero-img.jpg);
+    background-image: url(/images/hero-img.jpg);
     background-size: cover;
     width: 20%;
     height: 40vh;
 }
 .hero-image .img3 {
-    background-image: url(/hero-img.jpg);
+    background-image: url(/images/hero-img.jpg);
     background-size: cover;
     width: 14%;
     height: 40vh;
 }
 .hero-image .img4 {
-    background-image: url(/hero-img.jpg);
+    background-image: url(/images/hero-img.jpg);
     background-size: cover;
     width: 8%;
     height: 40vh;
