--- a/styles.css
+++ b/styles.css
@@ -417,6 +417,11 @@ footer {
     gap: 3em
 }
 
+.left a {
+    text-decoration: none;
+    color: #fff
+}
+
 .footer-left .left {
     border-right: 1px solid #ffffff72;
     display: flex;
