--- a/project.css
+++ b/project.css
@@ -5,7 +5,8 @@
 }
 
 body {
-    background-color: rgb(248, 254, 255);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: linear-gradient(to right, #f9f9f9, #e0f7fa);
 }
 
 header {
@@ -60,6 +61,10 @@ span {
 }
 
 .nav li:hover {
+    text-decoration: underline;
+}
+
+.nav .active {
     text-decoration: underline;
 }
 
