--- a/project.css
+++ b/project.css
@@ -6,7 +6,8 @@
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(to right, #f9f9f9, #e0f7fa);
+    /* background: linear-gradient(to right, #f9f9f9, #e0f7fa); */
+    background-color: #101828;
 }
 
 header {
@@ -16,7 +17,7 @@ header {
     width: 100%;
     height: 10vh;
     padding: 0 10em;
-    border-bottom: 1px solid rgb(209, 209, 209);
+    border-bottom: 1px solid rgba(168, 168, 168, 0.282);
 }
 
 .top-logo{
@@ -30,7 +31,7 @@ header {
 }
 
 .logo h3 {
-    color: #0F1B2F;
+    color: #fff;
     letter-spacing: -1px;
 }
 
@@ -57,15 +58,19 @@ span {
 
 .nav ul li a {
     text-decoration: none;
-    color: #0F1B2F;
+    color: #fff;
+    align-items: center;
+    transition: all ease .3s;
 }
 
-.nav li:hover {
-    text-decoration: underline;
+.nav li a:hover {
+    border-bottom: 2px solid #fff;
+    padding-bottom: 5px;
 }
 
-.nav .active {
-    text-decoration: underline;
+.active {
+    padding-bottom: 5px;
+    border-bottom: 2px solid #fff
 }
 
 .support button {
@@ -81,10 +86,25 @@ span {
 }
 
 .sections {
-    padding: 4em 10em;
+    padding: 3em 10em;
     display: flex;
     flex-direction: column;
-    gap: 2em
+    gap: 4em
+}
+
+.my-project {
+    display: flex;
+    gap: 1em
+}
+
+.my-project .folder{
+    width: 2em;
+    color: rgb(125, 139, 211)
+
+}
+
+.sections h1{
+    color: #fff
 }
 
 .section {
@@ -97,22 +117,56 @@ span {
 
 .first-card {
     width: 100%;
-    padding: 2em;
-    background-color: rgb(238, 246, 255);
-    flex: 0 0 calc(32.744% - 1rem);
+    flex: 0 0 calc(49.744% - 1rem);
     gap: 1em;
     display: flex;
     flex-direction: column;
     color: #0F1B2F;
-    padding: 2rem;
     border-radius: 15px;
     border: 2px solid #0f1b2f38
 }
 
+.image {
+    background-image: url(/images/snowman.jpg);
+    width: 100%;
+    height: 40vh;
+    border-radius: 1em;
+    background-position: 10% 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.image:hover {
+    transform: scale(1.05);
+    transition: all ease .5s;
+}
+
+.text-card {
+    background-color: #a5a5a56a;
+    border-radius: 1em;
+    gap: 1em;
+    padding: 1.5em;
+    color: #fff
+}
+
+.text-card h3 {
+    margin-bottom: 0.5em;
+}
+
 .first-card:hover {
-    background-color: #0F1B2F;
+    background-color: #101828;
     color:#fff;
     transition: all ease-in .3s;
+}
+
+.text-card a {
+    text-decoration: none;
+    color: #fff;
+    background-color: rgb(125, 139, 211);
+    display: inline-block;
+    padding: 9px 20px;
+    border-radius: 0.5em;
+    margin: 1.3em 0
 }
 
 .language {
@@ -146,13 +200,13 @@ span {
 }
 
 footer {
-    background-color: #0F1B2F;
+    background-color: #101828;
     display: flex;
     justify-content: space-between;
     padding: 4em 10em;
-    color: #fff
+    color: #fff;
+    border-top: 1px solid rgba(168, 168, 168, 0.282);
 }
-
 
 .footer-left {
     display: flex;
