--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(to right, #f9f9f9, #e0f7fa);
+    /* background: linear-gradient(to right, #f9f9f9, #e0f7fa); */
+    background-color: #101828;
 }
 
 header {
@@ -16,7 +17,7 @@ header {
     width: 100%;
     height: 10vh;
     padding: 0 10em;
-    border-bottom: 1px solid rgb(209, 209, 209);
+    border-bottom: 1px solid rgba(168, 168, 168, 0.282);
 }
 
 .top-logo{
@@ -30,7 +31,7 @@ header {
 }
 
 .logo h3 {
-    color: #0F1B2F;
+    color: #fff;
     letter-spacing: -1px;
 }
 
@@ -57,11 +58,16 @@ span {
 
 .nav ul li a {
     text-decoration: none;
-    color: #0F1B2F;
+    color: #fff;
+    padding-bottom: 0px;
+    align-items: center;
+    transition: all ease .3s;
 }
 
-.nav li:hover {
-    text-decoration: underline;
+.nav li a:hover {
+    border-bottom: 2px solid #fff;
+    padding-bottom: 5px;
+
 }
 
 .support button {
@@ -83,14 +89,14 @@ span {
 
 .hero h2 {
     margin: 0 0 -1em;
-    color: #0F1B2F;
+    color: #fff;
 }
 
 .hero h1 {
     font-size: 6.9em;
     font-weight: 800;
     letter-spacing: -7px;
-    color:#0F1B2F;
+    color:#fff;
     margin-left: -5.5px
 }
 
@@ -99,13 +105,14 @@ span {
     justify-content: space-between;
     width: 100%;
     gap: 5em;
-    color: #333
+    color: rgb(168, 168, 168)
 }
 
 .text button {
+    color: #fff;
     height: 6vh;
     width: 20%;
-    border: 2px solid #0F1B2F;
+    border: 2px solid #fff;
     background-color: transparent;
     position: relative;
 }
@@ -115,7 +122,7 @@ span {
     position: absolute;
     top: 3px;
     left: 3px;
-    border: 2px solid black;
+    border: 2px solid #fff;
     height: 5.5vh;
     width: 100%;
     display: none;
@@ -156,7 +163,7 @@ span {
 
 .social-icon ul li a {
     text-decoration: none;
-    color: #0F1B2F;
+    color: rgb(168, 168, 168);
 }
 
 .social-icon ul li a i {
@@ -181,13 +188,13 @@ span {
 }
 
 .black:hover {
-    color: #0f1d36;
+    color: #1a4286;
     font-weight: 600;
 }
 
 .years span {
     font-size: 2em;
-    color: #0F1B2F;
+    color: rgb(125, 139, 211);
     margin-right: 0.1em;
     font-weight: 500;
 }
@@ -196,6 +203,7 @@ span {
     margin-top: 0.6em;
     line-height: 22px;
     font-weight: 400;
+    color: #fff
 }
 
 .image-section .hero-image {
@@ -246,7 +254,7 @@ span {
     font-size: 2.5em;
     margin-top: -0.2em;
     line-height: 1;
-    color: #0F1B2F;
+    color: rgb(125, 139, 211);
 }
 
 .assist .card {
@@ -258,20 +266,22 @@ span {
 
 .assist .card .card1 {
     width: 48.1%;
-    background-color: #fff;
+    background-color: #a5a5a51a;
     padding: 2em;
     border-radius: 15px;
-    border: 1px solid #0f1b2f17;
+    border: 2px solid #4d85e617;
+    backdrop-filter: blur(20%);
+    
     /* box-shadow: 0 2px 10px rgba(209, 209, 209, 0.223); */
 }
 
  .card .card1 p{
-    color: rgb(116, 116, 116);
+    color: rgb(168, 168, 168);
 }
 
 .card1 h3 {
     margin-top: 1.5em;
-    color:#0F1B2F
+    color:#fff
 }
 
 .card .number1 {
@@ -284,7 +294,7 @@ span {
     font-weight: 500;
     border-radius: 100%;
     text-align: center;
-    color: #0f1b2f4b;
+    color: #fff;
     margin-top: -10px
 }
 
@@ -300,7 +310,7 @@ span {
 .container::after {
     content: "";
     position: absolute;
-     background-color: #f4f6ff;
+     background-color: #bbc4eefd;
     width: 61vw;
     height: 50vh;
     top:- 1em;
@@ -407,11 +417,12 @@ textarea[placeholder]:focus {
 
 
 footer {
-    background-color: #0F1B2F;
+    background-color: #101828;
     display: flex;
     justify-content: space-between;
     padding: 4em 10em;
-    color: #fff
+    color: #fff;
+    border-top: 1px solid rgba(168, 168, 168, 0.282)
 }
 
 .footer-left {
