--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     /* background: linear-gradient(to right, #f9f9f9, #e0f7fa); */
     background-color: #101828;
+    position: relative;
 }
 
 header {
@@ -70,18 +71,6 @@ span {
 
 }
 
-.support button {
-    padding: 1em 3em;
-    border: none;
-    background-color: #0F1B2F;
-    color: #fff;
-    border-radius: 10px;
-}
-
-.support button:hover {
-    background-color: #0f1b2fdb;
-}
-
 .hero {
     width: 100%;
     padding: 3em 10em;
@@ -108,30 +97,34 @@ span {
     color: rgb(168, 168, 168)
 }
 
-.text button {
+.text a {
     color: #fff;
     height: 6vh;
     width: 20%;
     border: 2px solid #fff;
     background-color: transparent;
     position: relative;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.text button::after {
+.text a::after {
     content: "";
     position: absolute;
     top: 3px;
     left: 3px;
-    border: 2px solid #fff;
+    border: 2px solid rgb(125, 139, 211);
     height: 5.5vh;
     width: 100%;
     display: none;
-    transition: display 10.3s ease;
+    transition: all 10.3s ease;
 }
 
-.text button:hover::after {
+.text a:hover::after {
     display: block;
-    transition: display 10.3s ease;
+    transition: all 10.3s ease;
 }
 
 .image-section {
@@ -218,6 +211,13 @@ span {
     width: 32%;
     height: 40vh;
 }
+.hero-image .img:hover,
+.hero-image .img1:hover,
+.hero-image .img2:hover,
+.hero-image .img3:hover {
+    transform: rotateY(-180deg);
+    transition: all ease-in-out .7s;
+}
 .hero-image .img1 {
     background-image: url(/images/hero-img.jpg);
     background-size: cover;
@@ -244,17 +244,57 @@ span {
     border-radius: 0px 70px 70px 0px;
 }
 
+.my-skills {
+    padding: 3em 10em 8em;
+    text-align: center;
+    color: #fff;
+    background-color: #1018287e;
+    position: relative;
+    z-index: 999;
+    backdrop-filter: blur(100px);
+}
+
+.my-skills .tools ul {
+    display: flex;
+    list-style: none;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5em;
+    flex-wrap: wrap;
+    margin-top: 3em
+}
+
+.my-skills .tools li {
+    padding: 1.4em 6em;
+    background-color: #a5a5a51a;
+    border-radius: 7px;
+}
+
+.tools img {
+    width: 4em;
+}
+
+.tools li:hover img {
+    transform: scale(1.3);
+    transition: all ease .4s;
+}
+
+.tools li:hover {
+    background-color: #a5a5a533;
+    transition: all ease .4s;
+}
+
 .assist {
     display: flex;
     justify-content: space-between;
-    padding: 2em 10em 4em;
+    padding: 2em 10em 7em;
 }
 
 .assist .text h1 {
     font-size: 2.5em;
     margin-top: -0.2em;
     line-height: 1;
-    color: rgb(125, 139, 211);
+    color: rgb(255, 255, 255);
 }
 
 .assist .card {
@@ -464,8 +504,9 @@ footer {
 }
 
 .social-icons {
-    align-content: center;
-    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 1em
 }
 
 .social-icons ul {
