--- a/about.css
+++ b/about.css
@@ -145,7 +145,7 @@ span {
 }
 
 .snowman-image {
-    background-image: url(/images/snowman.jpg);
+    background-image: url(images/snowman.jpg);
     width: 100%;
     height: 35vh;
     background-position: 50% 30%;
