--- a/project.css
+++ b/project.css
@@ -115,7 +115,7 @@ span {
 }
 
 .image {
-    background-image: url(/images/snowman.jpg);
+    background-image: url(images/snowman.jpg);
     width: 100%;
     height: 40vh;
     border-radius: 1em;
