--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,35 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     /* background: linear-gradient(to right, #f9f9f9, #e0f7fa); */
     background-color: #101828;
+}
+
+.body {
     position: relative;
+    background-color: #1018288c;
+    backdrop-filter: blur(55px);
+}
+
+body::after {
+    position: fixed;
+    content: "";
+    width: 20vw;
+    height: 30vh;
+    border-radius: 50%;
+    background-color: rgba(66, 222, 92, 0.463);
+    top: 15%;
+    left: 5%;
+    z-index: -99
+}
+body::before {
+    position: fixed;
+    content: "";
+    width: 20vw;
+    height: 30vh;
+    border-radius: 50%;
+    background-color: rgba(125, 139, 211, 0.625);
+    top: 40%;
+    right: 10%;
+    z-index: -99
 }
 
 header {
