responsiveness is 99% completed

--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,6 @@ span {
 .nav ul {
     display: flex;
     gap: 2em;
-    padding: 0 1em;
     gap: 2.5em;
 }
 
@@ -96,7 +95,6 @@ span {
 .nav li a:hover {
     border-bottom: 2px solid #fff;
     padding-bottom: 5px;
-
 }
 
 .hero {
@@ -110,7 +108,7 @@ span {
 }
 
 .hero h1 {
-    font-size: 6.9em;
+    font-size: 7.2vw;
     font-weight: 800;
     letter-spacing: -7px;
     color:#fff;
@@ -125,10 +123,18 @@ span {
     color: rgb(168, 168, 168)
 }
 
+br {
+    display: none;
+}
+
+.text .left-text {
+    width: 60%;
+}
+
 .text a {
     color: #fff;
     height: 6vh;
-    width: 20%;
+    width: 11%;
     border: 2px solid #fff;
     background-color: transparent;
     position: relative;
@@ -158,9 +164,8 @@ span {
 .image-section {
     width: 100%;
     display: flex;
-    justify-content: space-between;
-    align-items: left;
-    gap: 2em;
+    align-items: center;
+    gap: 5em;
     margin-top: 2em;
 }
 
@@ -169,12 +174,6 @@ span {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding-left: 2.4em
-}
-
-.social-icon ul{
-    gap:333em;
-    margin-top: 2em
 }
 
 .social-icon ul li {
@@ -183,34 +182,43 @@ span {
 }
 
 .social-icon ul li a {
+    display: flex;
+    align-items: center;
+    gap: 1em;
     text-decoration: none;
     color: rgb(168, 168, 168);
 }
 
 .social-icon ul li a i {
-    margin: 0 0.5em 0 0;
     font-size: 20px;
 }
 
 .green:hover {
     color: rgb(17, 205, 83);
     font-weight: 600;
-    transform: scale(1.9);
+    transform: scale(1.2);
+    transition: all ease .3s;
 }
 
 .pink:hover {
     color: rgb(230, 11, 135);
     font-weight: 600;
+    transform: scale(1.2);
+    transition: all ease .3s;
 }
 
 .blue:hover {
     color: rgb(26, 128, 222);
     font-weight: 600;
+    transform: scale(1.2);
+    transition: all ease .3s;
 }
 
 .black:hover {
     color: #1a4286;
     font-weight: 600;
+    transform: scale(1.2);
+    transition: all ease .3s;
 }
 
 .years span {
@@ -230,7 +238,7 @@ span {
 .image-section .hero-image {
     display: flex;
     gap: 7px;
-    width: 90%;
+    width: 100%;
 }
 
 .hero-image .img {
@@ -276,10 +284,7 @@ span {
     padding: 3em 10em 8em;
     text-align: center;
     color: #fff;
-    background-color: #1018287e;
-    position: relative;
-    z-index: 999;
-    backdrop-filter: blur(100px);
+    background-color: #101828b6;
 }
 
 .my-skills .tools ul {
@@ -289,7 +294,8 @@ span {
     align-items: center;
     gap: 1.5em;
     flex-wrap: wrap;
-    margin-top: 3em
+    margin-top: 3em;
+    width: 100%
 }
 
 .my-skills .tools li {
@@ -318,7 +324,7 @@ span {
     padding: 2em 10em 7em;
 }
 
-.assist .text h1 {
+.assist .texxt h1 {
     font-size: 2.5em;
     margin-top: -0.2em;
     line-height: 1;
@@ -333,7 +339,7 @@ span {
 }
 
 .assist .card .card1 {
-    width: 48.1%;
+    width: 24.4vw;
     background-color: #a5a5a51a;
     padding: 2em;
     border-radius: 15px;
@@ -551,6 +557,199 @@ footer {
     text-decoration: none;
     color: #ffffff72;
     font-size: 20px
+}
+
+@media (max-width: 768px){
+    .hero {
+        padding: 3em 2em;
+    }
+
+    .hero h1 {
+        font-size: 4.3em;
+    }
+
+    .text {
+        align-items: center;
+    }
+
+    .image-section {
+        gap: 2em
+    }
+
+    .text a {
+        width: 16%;
+    }
+
+    .image-section .img{
+        width: 36%;
+        height: 35vh
+    }
+
+    .image-section .img2 {
+        width: 28%;
+        height: 35vh
+    }
+
+    .image-section .img3 {
+        width: 18%;
+        height: 35vh;
+    }
+
+    .image-section .img4 {
+        width: 12%;
+        height: 35vh;
+    }
+
+    .years span {
+        font-size: 1.5em
+    }
+
+    .img1 {
+        display: none;
+    }
+
+    .experience {
+        width: 20%;
+    }
+
+    .experience h3{
+        margin-top: 0; 
+    }
+
+    .my-skills {
+       padding: 3em 2em
+    }
+
+    .my-skills .tools ul {
+        column-count: 3;
+        gap: 1em 
+    }
+
+    .my-skills .tools li {
+        padding: 1em 4em;
+        width: 31%;
+    }
+
+    .tools img {
+        width: 3em
+    }
+
+    .assist {
+        padding: 2em;
+        flex-direction: column;
+        gap: 2em
+    }
+
+    .assist .texxt {
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .assist .card .card1 {
+        width: 43.6vw;
+    }
+
+    .form {
+        width: 90%
+    }
+        
+}
+
+@media (max-width: 426px){
+    .hero {
+        padding: 2em 1em;
+        text-align: center;
+    }
+
+    .hero h1 span {
+        margin-top: 15em
+    }
+
+    .hero .text {
+        flex-direction: column;
+        gap: 2.5em;
+        justify-content: center;
+    }
+
+    br {
+        display: block;
+    }
+
+    .text .left-text {
+        width: 100%;
+        margin-top: 1em
+    }
+
+    .text a {
+        width: 25%
+    }
+
+    .image-section .hero-image {
+        display: none;
+    }
+
+    .experience {
+        width: 100%;
+    }
+
+    .social-icon ul {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 3em;
+        margin-bottom: 1em;
+    }
+
+    .social-icon ul li a p{
+        display: none;
+    }
+
+    .my-skills {
+        padding: 1em;
+    }
+
+    .my-skills .tools li {
+        width: 44vw;
+        padding: 1em 2em;
+    }
+
+    .assist {
+        padding: 3em 1em;
+    }
+
+    .assist .card .card1 {
+        width: 100%
+    }
+
+    .container {
+        padding: 1em 
+    }
+
+    .form {
+        margin-top: 1em;
+    }
+
+    .form input {
+        margin: 0.5em 0
+    }
+
+    .form .top {
+        flex-direction: column;
+    }
+
+    .container1 {
+        width: 100%;
+    }
+
+    .container::before{
+        width: 83%
+    }
+
+    .container::after {
+        width: 72%
+    }
 }
 
 
