--- a/contact.css
+++ b/contact.css
@@ -77,7 +77,6 @@ span {
 .nav ul {
     display: flex;
     gap: 2em;
-    padding: 0 1em;
     gap: 2.5em;
 }
 
@@ -399,10 +398,10 @@ footer {
     #dropNav {
         display:flex;
         position: absolute;
-        top: 2em;
-        right: -22em;
-        width: 20em;
-        height: 200px;
+        top: 2.3em;
+        right: -26em;
+        width: 24.6em;
+        height: 240px;
         list-style: none;
         background-color: rgb(125, 139, 211);
         flex-direction: column;
@@ -429,6 +428,7 @@ footer {
     .hamburger li {
         display: block;
         padding-bottom: 5px;
+        text-align: center;
     }
 
     .hamburger li a {
@@ -436,6 +436,7 @@ footer {
         text-decoration: none;
         display: flex;
         padding: 0.7em 2em;
+        justify-content: center;
     }
 
     .hamburger li a:hover {
