--- a/styles.css
+++ b/styles.css
@@ -420,7 +420,7 @@ br {
 
 .form {
     text-align: left;
-    width: 45%;
+    width: 65%;
     margin-top: 1.5em
 }
 
@@ -454,7 +454,6 @@ br {
     border: none;
     border-bottom: 1px solid #0F1B2F;
     background-color: transparent;
-    align-content: flex-start;
     overflow:hidden;
     margin-top: 1em;
 }
@@ -667,6 +666,10 @@ footer {
         margin-top: 15em
     }
 
+    .hero h1 {
+        padding: 12px 0; 
+    }
+
     .hero .text {
         flex-direction: column;
         gap: 2.5em;
@@ -702,8 +705,16 @@ footer {
         margin-bottom: 1em;
     }
 
+    .social-icon ul li a i{
+        font-size: 1.5em
+    }
+
     .social-icon ul li a p{
         display: none;
+    }
+
+    .years {
+        margin: 0 0 1.5em
     }
 
     .my-skills {
@@ -719,6 +730,10 @@ footer {
         padding: 3em 1em;
     }
 
+    .assist .card {
+        gap:1.5em
+    }
+
     .assist .card .card1 {
         width: 100%
     }
@@ -727,6 +742,13 @@ footer {
         padding: 1em 
     }
 
+    .textt h1 {
+        margin-top: -0.5em;
+    }
+
+    .textt p{
+        margin: 0 2em
+    }
     .form {
         margin-top: 1em;
     }
@@ -741,14 +763,17 @@ footer {
 
     .container1 {
         width: 100%;
+        padding: 17.5em 0
     }
 
     .container::before{
-        width: 83%
+        width: 83%;
+        top: 3.5em;
     }
 
     .container::after {
-        width: 72%
+        width: 72%;
+        top: 2.3em
     }
 }
 
