--- a/styles.css
+++ b/styles.css
@@ -40,13 +40,23 @@ body::before {
 }
 
 header {
+    position: fixed;
+    top: 0;
+    background-color: #101828;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 10vh;
     padding: 0 10em;
+    z-index: 9999;
+    transition: top ease .3s;
     border-bottom: 1px solid rgba(168, 168, 168, 0.282);
+}
+
+.divv {
+    width: 100%;
+    height: 8vh;
 }
 
 .top-logo{
