--- a/contact.css
+++ b/contact.css
@@ -412,18 +412,19 @@ footer {
     #dropNav {
         display:flex;
         position: absolute;
-        top: 2.3em;
+        top: 2.5em;
         right: -26em;
         width: 24.6em;
-        height: 240px;
+        height: 290px;
         list-style: none;
         background-color: rgb(125, 139, 211);
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
         gap: 1em;
-        padding: 1em;
+        padding: 1em 100%;
         overflow: hidden;
         border-radius: 10px 0 10px 10px;
-        overflow: hidden;
         z-index: 999;
         transition: right 0.3s cubic-bezier(.77,0,.18,1);
         backdrop-filter: blur(30px);
@@ -435,8 +436,9 @@ footer {
 
     #dropNav.active {
         transition: right 0.3s cubic-bezier(.77,0,.18,1);
-        display: block;
-        right: 0
+        display: flex;
+        right: 0;
+        height: 290px
     }
 
     .hamburger li {
@@ -451,15 +453,15 @@ footer {
         display: flex;
         padding: 0.7em 2em;
         justify-content: center;
+        align-items: center;
     }
-
+    #dropNav .active,
     .hamburger li a:hover {
         background-color: #101828;
         color: #fff;
         border-radius: 10px;
-    }
-
-    .active {
+        display: flex;
+        width: 20em;
         border: none;
     }
 
