fixed to perfection

--- a/contact.css
+++ b/contact.css
@@ -44,7 +44,7 @@ body::before {
 }
 
 header {
-    position: fixed;
+    position: sticky;
     top: 0;
     background-color: #101828;
     display: flex;
