--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ body::before {
 }
 
 header {
-    position: fixed;
+    position: sticky;
     top: 0;
     background-color: #101828;
     display: flex;
@@ -58,10 +58,7 @@ header {
     border-bottom: 1px solid rgba(168, 168, 168, 0.282);
 }
 
-.divv {
-    width: 100%;
-    height: 8vh;
-}
+
 
 .top-logo{
     text-decoration: none;
@@ -113,7 +110,7 @@ span {
 
 .hero {
     width: 100%;
-    padding: 3em 10em;
+    padding: 1em 10em;
 }
 
 .hero h2 {
