added little animation

--- a/about.css
+++ b/about.css
@@ -23,25 +23,47 @@ body {
 body::after {
     position: fixed;
     content: "";
-    width: 20vw;
-    height: 30vh;
+    width: 30vw;
+    height: 40vh;
     border-radius: 50%;
-    background-color: rgba(66, 222, 92, 0.463);
+    background-color: rgba(66, 222, 92, 0.559);
     top: 15%;
     left: 5%;
-    z-index: -99
+    z-index: -99;
+    animation: pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+
+@keyframes pulse {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: .5;
+  }
 }
 
 body::before {
     position: fixed;
     content: "";
-    width: 20vw;
-    height: 30vh;
+    width: 30vw;
+    height: 40vh;
     border-radius: 50%;
-    background-color: rgba(125, 139, 211, 0.625);
+    background-color: rgba(125, 139, 211, 0.701);
     top: 40%;
     right: 10%;
-    z-index: -99
+    z-index: -99;
+    animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+
+@keyframes pulse {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: .5;
+  }
 }
 
 header {
